--- a/lab2/Cargo.toml
+++ b/lab2/Cargo.toml
@@ -10,8 +10,8 @@ cortex-m = "0.6.2"
 cortex-m-rt = "0.6.12"
 stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
 panic-halt = "0.2.0"
-libm = "0.2.1"
 itertools = { version = "0.9.0", default-features = false }
+micromath = "1.0.0"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
