--- a/lab1/Cargo.toml
+++ b/lab1/Cargo.toml
@@ -10,6 +10,8 @@ cortex-m = "0.6.2"
 cortex-m-rt = "0.6.12"
 stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
 panic-halt = "0.2.0"
+lis302dl = "0.1.0"
+accelerometer = "0.11.0"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
