--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -13,6 +13,8 @@ panic-halt = "0.2.0"
 itertools = { version = "0.9.0", default-features = false }
 micromath = "1.0.0"
 microfft = "0.3.0"
+panic_rtt = "0.3.0"
+jlink_rtt = "0.2.0"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
