--- a/lab2/Cargo.toml
+++ b/lab2/Cargo.toml
@@ -14,6 +14,7 @@ itertools = { version = "0.9.0", default-features = false }
 micromath = "1.0.0"
 panic_rtt = "0.3.0"
 jlink_rtt = "0.2.0"
+heapless = "0.5.5"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
