prefer index checks to checked math, but then use debug mode to catch bad access

--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -19,3 +19,21 @@ jlink_rtt = "0.2.0"
 [dependencies.embedded-hal]
 features = ["unproven"]
 version = "0.2.3"
+
+[profile.dev]
+codegen-units = 1
+debug = 1
+debug-assertions = true # !
+incremental = false
+lto = "fat"
+opt-level = 'z' # !
+overflow-checks = true
+
+[profile.release]
+codegen-units = 1
+debug = 1
+debug-assertions = false
+incremental = false
+lto = "fat"
+opt-level = 3
+overflow-checks = false
