--- a/lab2/Cargo.toml
+++ b/lab2/Cargo.toml
@@ -13,6 +13,7 @@ micromath = "1.0.1"
 panic_rtt = "0.3.0"
 jlink_rtt = "0.2.0"
 heapless = "0.5.5"
+itertools = { version = "0.9.0", default-features = false }
 
 [dependencies.embedded-hal]
 features = ["unproven"]
