--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -14,6 +14,7 @@ micromath = "1.0.1"
 microfft = "0.3.0"
 jlink_rtt = "0.2.0"
 panic_rtt = "0.3.0"
+itertools = { version = "0.9.0", default-features = false }
 
 [dependencies.embedded-hal]
 features = ["unproven"]
