--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -15,6 +15,7 @@ microfft = "0.3.0"
 jlink_rtt = "0.2.0"
 panic_rtt = "0.3.0"
 itertools = { version = "0.9.0", default-features = false }
+heapless = "0.5.5"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
