--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -17,6 +17,8 @@ panic_rtt = "0.3.0"
 itertools = { version = "0.9.0", default-features = false }
 heapless = "0.5.5"
 typenum = "1.12.0"
+lis302dl = "0.1.0"
+accelerometer = "0.11.0"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
