--- a/lab2/Cargo.toml
+++ b/lab2/Cargo.toml
@@ -15,6 +15,7 @@ jlink_rtt = "0.2.0"
 heapless = "0.5.5"
 itertools = { version = "0.9.0", default-features = false }
 typenum = "1.12.0"
+cty = "0.2.1"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
