--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -19,6 +19,7 @@ heapless = "0.5.5"
 typenum = "1.12.0"
 lis302dl = "0.1.0"
 accelerometer = "0.11.0"
+cty = "0.2.1"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
