--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -20,6 +20,7 @@ typenum = "1.12.0"
 lis302dl = "0.1.0"
 accelerometer = "0.11.0"
 cty = "0.2.1"
+cmsis-dsp-sys = "0.2.0"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
