--- a/lab1/Cargo.toml
+++ b/lab1/Cargo.toml
@@ -12,8 +12,8 @@ stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
 panic-halt = "0.2.0"
 lis302dl = "0.1.0"
 accelerometer = "0.11.0"
-panic_rtt = "0.3.0"
-jlink_rtt = "0.2.0"
+panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
+rtt-target = { version = "0.2.0", features = ["cortex-m"] }
 
 [dependencies.embedded-hal]
 features = ["unproven"]
