--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -12,8 +12,8 @@ stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
 panic-halt = "0.2.0"
 micromath = "1.0.1"
 microfft = "0.3.0"
-jlink_rtt = "0.2.0"
-panic_rtt = "0.3.0"
+panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
+rtt-target = { version = "0.2.0", features = ["cortex-m"] }
 itertools = { version = "0.9.0", default-features = false }
 heapless = "0.5.5"
 typenum = "1.12.0"
