--- a/lab5/Cargo.toml
+++ b/lab5/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2018"
 cortex-m = "0.6.2"
 cortex-m-rt = "0.6.12"
 micromath = "1.0.1"
-jlink_rtt = "0.2.0"
-panic_rtt = "0.3.0"
+panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
+rtt-target = { version = "0.2.0", features = ["cortex-m"] }
 heapless = "0.5.5"
 typenum = "1.12.0"
 nb = "0.1.2"
