--- a/lab0/.embed.toml
+++ b/lab0/.embed.toml
@@ -1,5 +1,10 @@
 [default.rtt]
 enabled = true
+log_enabled = false
+show_timestamps = false
 
 [default.general]
 chip = "STM32F407VGTx"
+
+[default.flashing]
+enabled = true
