--- a/lab1/Cargo.toml
+++ b/lab1/Cargo.toml
@@ -6,19 +6,37 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-cortex-m = "0.6.2"
+cortex-m = "0.6.3"
 cortex-m-rt = "0.6.12"
 stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
 panic-halt = "0.2.0"
 lis302dl = "0.1.0"
 accelerometer = "0.11.0"
-panic_rtt = "0.3.0"
-jlink_rtt = "0.2.0"
+rtt-target = { version = "0.2.0", features = ["cortex-m"] }
+panic_break = { path = "../panic_break" }
 
 [dependencies.embedded-hal]
 features = ["unproven"]
-version = "0.2.3"
+version = "=0.2.3"
 
 # for cargo flash
 [package.metadata]
 chip = "STM32F407VGTx"
+
+[profile.dev]
+codegen-units = 1
+debug = 1
+debug-assertions = true # !
+incremental = false
+lto = "fat"
+opt-level = 'z' # !
+overflow-checks = false
+
+[profile.release]
+codegen-units = 1
+debug = 1
+debug-assertions = false
+incremental = false
+lto = "fat"
+opt-level = 3
+overflow-checks = false
