--- a/lab2/Cargo.toml
+++ b/lab2/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-cortex-m = "0.6.2"
+cortex-m = "0.6.3"
 cortex-m-rt = "0.6.12"
 stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
 micromath = "1.0.1"
-panic_rtt = "0.3.0"
-jlink_rtt = "0.2.0"
+rtt-target = { version = "0.2.0", features = ["cortex-m"] }
+panic_break = { path = "../panic_break" }
 heapless = "0.5.5"
 itertools = { version = "0.9.0", default-features = false }
 typenum = "1.12.0"
@@ -19,7 +19,11 @@ cty = "0.2.1"
 
 [dependencies.embedded-hal]
 features = ["unproven"]
-version = "0.2.3"
+version = "=0.2.3"
+
+# for cargo flash
+[package.metadata]
+chip = "STM32F407VGTx"
 
 [profile.dev]
 codegen-units = 1
@@ -28,7 +32,7 @@ debug-assertions = true # !
 incremental = false
 lto = "fat"
 opt-level = 'z' # !
-overflow-checks = true
+overflow-checks = false
 
 [profile.release]
 codegen-units = 1
