--- a/lab5/Cargo.toml
+++ b/lab5/Cargo.toml
@@ -6,14 +6,15 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-cortex-m = "0.6.2"
+cortex-m = "0.6.3"
 cortex-m-rt = "0.6.12"
 micromath = "1.0.1"
-jlink_rtt = "0.2.0"
-panic_rtt = "0.3.0"
+rtt-target = { version = "0.2.0", features = ["cortex-m"] }
+panic_break = { path = "../panic_break" }
 heapless = "0.5.5"
 typenum = "1.12.0"
 nb = "0.1.2"
+panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
 
 [dependencies.stm32f4xx-hal]
 features = ["stm32f407", "rt"]
@@ -21,7 +22,11 @@ version = "0.8.1"
 path = "../../stm32f4xx-hal"
 
 [dependencies.embedded-hal]
-version = "0.2.3"
+version = "=0.2.3"
+
+# for cargo flash
+[package.metadata]
+chip = "STM32F407VGTx"
 
 [profile.dev]
 codegen-units = 1
@@ -30,7 +35,7 @@ debug-assertions = true # !
 incremental = false
 lto = "fat"
 opt-level = 'z' # !
-overflow-checks = true
+overflow-checks = false
 
 [profile.release]
 codegen-units = 1
