--- a/lab1/Cargo.toml
+++ b/lab1/Cargo.toml
@@ -12,7 +12,7 @@ stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
 panic_break = { path = "../panic_break" }
 panic-halt = "0.2.0"
 rtt-target = { version = "0.2.1", features = ["cortex-m"] }
-lis302dl = "0.1.0"
+lis3dsh = { git = "https://github.com/jacobrosenthal/lis3dsh-rs", branch = "bdu" }
 accelerometer = "0.11.0"
 
 [dependencies.embedded-hal]
