--- a/lab4/Cargo.toml
+++ b/lab4/Cargo.toml
@@ -17,7 +17,7 @@ microfft = "0.3.0"
 itertools = { version = "0.9.0", default-features = false }
 heapless = "0.5.5"
 typenum = "1.12.0"
-lis302dl = "0.1.0"
+lis3dsh = { git = "https://github.com/jacobrosenthal/lis3dsh-rs", branch = "bdu" }
 accelerometer = "0.11.0"
 cty = "0.2.1"
 cmsis-dsp-sys = "0.2.0"
