--- a/lab2/Cargo.toml
+++ b/lab2/Cargo.toml
@@ -12,9 +12,8 @@ stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
 panic_break = { path = "../panic_break" }
 rtt-target = { version = "0.2.2", features = ["cortex-m"] }
 micromath = "1.0.1"
-heapless = "0.5.5"
+heapless = { version = "0.5.5", git = "https://github.com/perlindgren/heapless/", branch = "const_generics" }
 itertools = { version = "0.9.0", default-features = false }
-typenum = "1.12.0"
 cty = "0.2.1"
 
 [dependencies.embedded-hal]
