--- a/lab4-native/Cargo.toml
+++ b/lab4-native/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 textplots = "0.5.1"
-typenum = "1.12.0"
-heapless = "0.5.5"
+heapless = { version = "0.5.5", git = "https://github.com/perlindgren/heapless/", branch = "const_generics" }
 itertools = { version = "0.9.0", default-features = false }
 microfft = "0.3.0"
 image = "0.23.5"
