--- a/lab0/Cargo.toml
+++ b/lab0/Cargo.toml
@@ -3,21 +3,22 @@ name = "lab0"
 version = "0.1.0"
 authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
 edition = "2018"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-cortex-m = "0.6.3"
+cortex-m = "0.7.2"
 cortex-m-rt = "0.6.12"
-stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
+stm32f4xx-hal = { version = "0.9.0", features = ["stm32f407", "rt"] }
 panic-halt = "0.2.0"
 panic_break = { path = "../panic_break" }
 panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
-rtt-target = { version = "0.2.2", features = ["cortex-m"] }
-heapless = { version = "0.5.5", git = "https://github.com/perlindgren/heapless/", branch = "const_generics" }
+rtt-target = { version = "0.3.1", features = ["cortex-m"] }
+heapless = { version = "0.7.0" }
 
 [dependencies.embedded-hal]
 features = ["unproven"]
-version = "=0.2.3"
+version = "0.2.5"
 
 # for cargo flash
 [package.metadata]
