--- a/lab2-native/Cargo.toml
+++ b/lab2-native/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-textplots = "0.5.1"
-heapless = { version = "0.5.5", git = "https://github.com/perlindgren/heapless/", branch = "const_generics" }
-itertools = { version = "0.9.0", default-features = false }
+textplots = "0.6.0"
+heapless = { version = "0.7.0" }
+itertools = { version = "0.10.0", default-features = false }
