--- a/lab5/Cargo.toml
+++ b/lab5/Cargo.toml
@@ -3,25 +3,25 @@ name = "lab5"
 version = "0.1.0"
 authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
 edition = "2018"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-cortex-m = "0.6.3"
+cortex-m = "0.7.2"
 cortex-m-rt = "0.6.12"
 panic_break = { path = "../panic_break" }
 panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
-rtt-target = { version = "0.2.2", features = ["cortex-m"] }
+rtt-target = { version = "0.3.1", features = ["cortex-m"] }
 micromath = "1.0.1"
-heapless = { version = "0.5.5", git = "https://github.com/perlindgren/heapless/", branch = "const_generics" }
-nb = "0.1.2"
+heapless = { version = "0.7.0" }
+nb = "1.0.0"
 
 [dependencies.stm32f4xx-hal]
 features = ["stm32f407", "rt"]
-version = "0.8.1"
-path = "../../stm32f4xx-hal"
+version = "0.9.0"
 
 [dependencies.embedded-hal]
-version = "=0.2.3"
+version = "0.2.5"
 
 # for cargo flash
 [package.metadata]
