--- a/lab4-native/.vscode/settings.json
+++ b/lab4-native/.vscode/settings.json
@@ -1,1 +1,7 @@
-{}
+{
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/target/**": true
+    }
+}
