--- a/lab1/Cargo.toml
+++ b/lab1/Cargo.toml
@@ -10,8 +10,7 @@ resolver = "2"
 cortex-m = "0.7.2"
 cortex-m-rt = "0.6.12"
 stm32f4xx-hal = { version = "0.9.0", features = ["stm32f407", "rt"] }
-panic_break = { path = "../panic_break" }
-panic-halt = "0.2.0"
+panic-probe = { version = "0.2.1", features = ["print-rtt"] }
 rtt-target = { version = "0.3.1", features = ["cortex-m"] }
 lis3dsh = { git = "https://github.com/jacobrosenthal/lis3dsh-rs", branch = "bdu" }
 
